# anki_memorizer_me_addon

./: .gitignore  README.md  __init__.py  debug.ps1  manifest.json  pack.ps1  pyproject.toml
ducks/: 2025-03-05-card-types.md
