[project]
name = "anki-memorizer-me-addon"
version = "0.1.0"
description = ""
authors = [
    {name = "Spencer Farley",email = "2847259+farlee2121@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
aqt = "^25.2"

